# q.industrialist

./: .gitignore  README.md  __init__.py  auth_cache.py  bluepint_materials_grabber.py  console_app.py  debug.py  esi_interface.py  eve_conveyor_tools.py  eve_db_tools.py  eve_efficiency.py  eve_esi_interface.py  eve_esi_tools.py  eve_industry_cost.py  eve_industry_profit.py  eve_praisal.py  eve_router_tools.py  eve_sde_tools.py  manipulate_yaml_and_json.py  parse_sde_yaml.py  pyproject.toml  q_accounting.py  q_assets.py  q_blueprints.py  q_blueprints_preloader.py  q_blueprints_settings.py.template  q_bpos.py  q_capital.py  q_capital_da8c005.py  q_capital_settings.py.template  q_conveyor.py  q_conveyor_db.py  q_conveyor_settings.py.template  q_delivery.py  q_dictionaries.py  q_discord.py  q_discord_settings.py.template  q_individualist_settings.py.template  q_industrialist.py  q_industrialist_settings.py.template  (+43 more)
2/: readme.txt
3/: readme.txt
bootstrap/: readme.txt
database/: 001.create_db.sql  002.create_schema.sql  002a.upgrades.sql  003.create_dictionaries.sql  003.create_esi_schema.sql  004.create_dictionaries.sql  004.create_esi_views.sql  004.load_test_data.sql  005.create_esi_logic.sql  005.create_esi_views.sql  006.create_dictionaries.sql  006.create_esi_logic.sql  007.load_test_data.sql  008.trade_hubs.sql  008b.upgrades.sql  008c.upgrades.sql  008e.upgrades.sql  009.conveyor.sql  100c.upgrades.sql  100d.upgrades.sql  100f.upgrades.sql  100g.upgrades.sql  100h.upgrades.sql  100i.upgrades.sql  100j.upgrades.sql  100k.upgrades.sql  100l.upgrades.sql  (+2 more)
(+210 files in other folders)
